# LazyLode

./: Cargo.toml  LICENSE  NAVIGATION_REFACTOR.md  advanced_key_mapping_example.toml  config.toml  cursor.md  example_config.toml  readme.md  test_config.rs  test_input.rs  test_our_changes  test_row_colors.rs  test_row_colors_simple.rs  test_syntax
.github/workflows/: ci.yml
config/themes/: catppuccin_frappe.toml  catppuccin_latte.toml  catppuccin_macchiato.toml  catppuccin_mocha.toml  dracula.toml  everforest.toml  gruvbox.toml  kanagawa.toml  matte_black.toml  nord.toml  one_dark.toml  one_light.toml  osaka_jade.toml  ristretto.toml  rose_pine.toml  tokyo_night.toml
src/: app.rs  bootstrap.rs  command.rs  config.rs  input.rs  lib.rs  logging.rs  main.rs  runtime.rs  theme.rs
src/database/: core.rs  error.rs  factory.rs  mod.rs  mongodb.rs  postgres.rs  sqlite.rs  ssh_tunnel.rs
src/navigation/: box_manager.rs  input_handler.rs  key_mapping.rs  key_mapping_test.rs  manager.rs  migration.rs  mod.rs  types.rs  vim_editor.rs
src/ui/: layout.rs  mod.rs  modal.rs  modal_manager.rs  types.rs
src/ui/components/: field_navigator.rs  mod.rs  text_input.rs
src/ui/modals/: command.rs  connection.rs  deletion.rs  mod.rs  themes.rs
src/ui/panes/: mod.rs  query_input.rs  results.rs  sidebar.rs
