[package]
name = "LazyLode"
version = "0.1.0"
edition = "2021"

[lib]
name = "lazylode"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
clipboard = "0.5"
crossterm = "0.29"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "6"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
mongodb = "3"
ssh2 = "0.9"
async-trait = "0.1"
futures = "0.3"
chrono = "0.4"
lazy_static = "1.4"
serde_json = "1"
uuid = { version = "1", features = ["serde"] }
tokio-rusqlite = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
hex = "0.4"

[dev-dependencies]
tempfile = "3"
